Feat: auth setup (#7)
* setup auth

* revert migrations

---------
