# packages/db-api/openapi.yaml
@@ -1,6 +1,6 @@
 openapi: 3.1.0
 info:
-  title: HR DB API,
+  title: WakandansHR DB API,
   version: apiVersion,
   description: |
     The HR DB API is a RESTful API that provides access to the HR database.
@@ -34,6 +34,7 @@ paths:
       summary: A simple hello world endpoint
       tags:
         - Hello
+      security: []
       responses:
         '200':
           description: Successful response
@@ -90,6 +91,186 @@ paths:
                     address:
                       type: string
                       example: '5th Street - Building 100, first floor'
+    post:
+      summary: Create a new location
+      tags:
+        - Locations
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                name:
+                  type: string
+                  example: 'New York Office'
+                country:
+                  type: string
+                  example: 'US'
+                city:
+                  type: string
+                  example: 'New York'
+                address:
+                  type: string
+                  example: '5th Street - Building 100, first floor'
+                workSettingId:
+                  type: integer
+                  example: 2
+      responses:
+        201:
+          description: Location created successfully
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  id:
+                    type: integer
+                    example: 1
+  /locations/count:
+    get:
+      summary: Retrieves the count of locations
+      tags:
+        - Locations
+      responses:
+        200:
+          description: The count of departments
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  count:
+                    type: integer
+                    example: 10
+  /locations/{locationId}:
+    get:
+      summary: Retrieve a specific location by ID
+      tags:
+        - Locations
+      parameters:
+        - name: locationId
+          in: path
+          required: true
+          schema:
+            type: integer
+          description: The ID of the location
+      responses:
+        200:
+          description: A location
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  id:
+                    type: integer
+                    example: 1
+                  name:
+                    type: string
+                    example: 'New York Office'
+                  country:
+                    type: string
+                    example: 'US'
+                  city:
+                    type: string
+                    example: 'New York'
+                  address:
+                    type: string
+                    example: '5th Street - Building 100, first floor'
+                  workSetting:
+                    type: object
+                  users:
+                    type: array
+                    items:
+                      type: object
+                  departments:
+                    type: array
+                    items:
+                      type: object
+                  teams:
+                    type: array
+                    items:
+                      type: object
+                  groups:
+                    type: array
+                    items:
+                      type: object
+                  locationStatuses:
+                    type: array
+                    items:
+                      type: object
+                  daysOffLocation:
+                    type: array
+                    items:
+                      type: object
+    put:
+      summary: Update a location by ID
+      tags:
+        - Locations
+      parameters:
+        - name: locationId
+          in: path
+          required: true
+          schema:
+            type: integer
+          description: The ID of the location
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                name:
+                  type: string
+                  example: 'New York Office'
+                country:
+                  type: string
+                  example: 'US'
+                city:
+                  type: string
+                  example: 'New York'
+                address:
+                  type: string
+                  example: '5th Street - Building 100, first floor'
+                workSettingId:
+                  type: integer
+                  example: 2
+      responses:
+        200:
+          description: Location updated successfully
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  success:
+                    type: string
+                    example: 'Location updated successfully'
+    delete:
+      summary: Delete a location by ID
+      tags:
+        - Locations
+      parameters:
+        - name: locationId
+          in: path
+          required: true
+          schema:
+            type: integer
+          description: The ID of the location
+      responses:
+        200:
+          description: Location deleted successfully
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  success:
+                    type: string
+                    example: 'Location deleted successfully'
   /login:
     post:
       summary: Generate a login token for a user
@@ -119,9 +300,6 @@ paths:
                   message:
                     type: string
                     example: 'Login token generated and email job created successfully'
-                  loginToken:
-                    type: string
-                    example: '4c2fdef7-9d3b-4c2d-a1b6-9c2bfc51900b'
   /validate-token:
     post:
       summary: Validate a login token
